Cleanup few more issues